Reimplementerer #407 refaktorering av tester (#422)
Co-authored-by: Roar Skinderviken <7499642+roar-skinderviken@users.noreply.github.com>