@@ -31,6 +31,7 @@ val unleashVersion = "11.0.2"
 val ktlintVersion = "1.4.1"
 val amtLibVersion = "1.2025.06.05_08.25-2338e0f39f58"
 val shedlockVersion = "6.9.2"
+val springmockkVersion = "4.0.2"
 
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter")
@@ -76,6 +77,7 @@ dependencies {
     implementation("net.javacrumbs.shedlock:shedlock-spring:$shedlockVersion")
     implementation("net.javacrumbs.shedlock:shedlock-provider-jdbc-template:$shedlockVersion")
 
+    testImplementation("org.springframework.boot:spring-boot-testcontainers")
     testImplementation("org.springframework.boot:spring-boot-starter-test") {
         exclude("com.vaadin.external.google", "android-json")
     }
@@ -88,10 +90,7 @@ dependencies {
     testImplementation("io.mockk:mockk:$mockkVersion")
     testImplementation("no.nav.amt.lib:testing:$amtLibVersion")
     testImplementation("com.squareup.okhttp3:mockwebserver:$okHttpVersion")
-}
-
-tasks.getByName<org.springframework.boot.gradle.tasks.bundling.BootJar>("bootJar") {
-    this.archiveFileName.set("${archiveBaseName.get()}.${archiveExtension.get()}")
+    testImplementation("com.ninja-squad:springmockk:$springmockkVersion")
 }
 
 kotlin {
@@ -102,10 +101,19 @@ kotlin {
     }
 }
 
-configure<org.jlleitschuh.gradle.ktlint.KtlintExtension> {
-    version.set(ktlintVersion)
+ktlint {
+    version = ktlintVersion
+}
+
+tasks.jar {
+    enabled = false
 }
 
 tasks.withType<Test> {
     useJUnitPlatform()
+
+    jvmArgs(
+        "-Xshare:off",
+        "-XX:+EnableDynamicAgentLoading",
+    )
 }
